<resources>
    <string name="app_name">OounabaraMusic</string>
    <string name="mogeko">Mogeko</string>
    <string name="choose_login_phone">手机号登陆</string>
    <string name="choose_login_nouser">立即体验</string>
    <string name="main_my">我的</string>
    <string name="main_search">发现</string>
    <string name="main_now">此刻</string>
    <string name="main_video">视频</string>
    <string name="search">检索</string>
    <string name="local_music">本地音乐</string>
    <string name="recently_played">最近播放</string>
    <string name="download_manager">下载管理</string>
    <string name="my_collection">我的收藏</string>
    <string name="created_playlist">创建的歌单</string>
    <string name="favorite_playlist">收藏的歌单</string>
    <string name="my_playlist_menu_title">创建的歌单</string>
    <string name="add_new_playlist">创建新歌单</string>
    <string name="management_playlist">管理歌单</string>
    <string name="restore_playlist">恢复歌单</string>
    <string name="my_playlist_item_menu_title">歌单：</string>
    <string name="download">下载</string>
    <string name="edit_playlist_info">编辑歌单信息</string>
    <string name="delete_playlist">删除</string>
    <string name="me_news">我的消息</string>
    <string name="my_friends">我的朋友</string>
    <string name="search_local_music">扫描本地音乐</string>
    <string name="local_music_edit">请输入歌名</string>
    <string name="play_all">播放全部</string>
    <string name="multiple_choice">多选</string>
    <string name="next_play">下一首播放</string>
    <string name="add_to_playlist">收藏到歌单</string>
    <string name="music_info">查看歌曲信息</string>
    <string name="delete_music">删除</string>
    <string name="local_music_item_menu_title">歌曲：</string>
    <string name="change_music_info">修改</string>
    <string name="file_name">文件名称：</string>
    <string name="file_path">文件路径：</string>
    <string name="file_size">文件大小：</string>
    <string name="file_play_length">播放时长：</string>
    <string name="dialog_playlist_name">请输入歌单标题</string>
    <string name="comment">评论</string>
    <string name="singer_name">歌手：</string>
    <string name="myLoceMusic">我的最爱</string>
</resources>
