<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/layout_card"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="20dp">

    <TextView
        android:text="@string/my_playlist_item_menu_title"
        android:textSize="@dimen/font_small_size"
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/negative"/>

    <LinearLayout
        android:id="@+id/item_menu_download"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/view_ripple_rectangle">

        <ImageView
            android:src="@mipmap/download"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/download"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/negative"/>

    <LinearLayout
        android:id="@+id/item_menu_edit_playlist_info"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/view_ripple_rectangle">

        <ImageView
            android:src="@mipmap/edit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit_playlist_info"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/negative"/>

    <LinearLayout
        android:id="@+id/item_menu_delete_playlist"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/view_ripple_rectangle">

        <ImageView
            android:src="@mipmap/delete"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_playlist"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>