<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/appbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size">

        <ImageView
            android:id="@+id/main_setting"
            android:src="@mipmap/setting"
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="@dimen/action_bar_size"
            android:layout_gravity="center_vertical"
            android:padding="15dp"
            android:layout_marginStart="5dp"
            android:contentDescription="主界面菜单"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/fragment_main_my"
            android:text="@string/main_my"
            android:textColor="@color/positive"
            android:textSize="@dimen/font_big_size"
            android:textStyle="bold"
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="match_parent"
            android:background="@drawable/toolbar_ripple_oval"
            android:gravity="center" />

        <TextView
            android:id="@+id/fragment_main_new_discovery"
            android:text="@string/main_search"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/top_tool_bar_un_select"
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="match_parent"
            android:background="@drawable/toolbar_ripple_oval"
            android:gravity="center"/>

        <TextView
            android:id="@+id/fragment_main_now"
            android:text="@string/main_now"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/top_tool_bar_un_select"
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="match_parent"
            android:background="@drawable/toolbar_ripple_oval"
            android:gravity="center"/>

        <TextView
            android:id="@+id/fragment_main_video"
            android:text="@string/main_video"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/top_tool_bar_un_select"
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="match_parent"
            android:background="@drawable/toolbar_ripple_oval"
            android:gravity="center"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/main_search"
            android:src="@mipmap/search"
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="@dimen/action_bar_size"
            android:padding="15dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            android:background="@drawable/toolbar_ripple_oval"
            android:contentDescription="检索歌曲"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <include layout="@layout/special_current_play_layout"/>

</LinearLayout>