<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/play_all"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:background="@drawable/view_ripple_rectangle">

        <ImageView
            android:src="@mipmap/play"
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="match_parent"
            android:padding="15dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_all"
            android:textColor="@color/positive"
            android:textSize="@dimen/font_medium_size"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:id="@+id/multiple_choice"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/view_ripple_rectangle">

            <ImageView
                android:src="@mipmap/setting"
                android:layout_width="@dimen/action_bar_size"
                android:layout_height="match_parent"
                android:padding="18dp"/>

            <TextView
                android:text="@string/multiple_choice"
                android:textColor="@color/positive"
                android:textSize="@dimen/font_small_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/bottom_toolbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/bottom_tool_next_play"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/view_ripple_rectangle">

            <ImageView
                android:src="@mipmap/play"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingTop="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:text="@string/next_play"
                android:textSize="@dimen/font_small_size"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_tool_add_to_playlist"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/view_ripple_rectangle">

            <ImageView
                android:src="@mipmap/add_to_playlist"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingTop="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:text="@string/add_to_playlist"
                android:textSize="@dimen/font_small_size"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_tool_delete"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/view_ripple_rectangle">

            <ImageView
                android:src="@mipmap/delete"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingTop="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:text="@string/delete_music"
                android:textSize="@dimen/font_small_size"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>