<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/layout_card"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/music_cover"
            android:src="@mipmap/choose_login"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/music_name"
            android:text="歌曲：津軽海峡・冬景色"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/music_cover"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/music_singer_in_title"
            android:text="石川さゆり"
            android:textSize="@dimen/font_small_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/music_cover"
            android:layout_below="@id/music_name"
            android:layout_alignStart="@id/music_name"
            android:layout_marginTop="3dp"
            tools:ignore="HardcodedText"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/negative"/>

    <LinearLayout
        android:id="@+id/music_next_play"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/view_ripple_rectangle"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/play"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next_play"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_add_to_playlist"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/view_ripple_rectangle"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/add_to_playlist"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_to_playlist"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_download"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/view_ripple_rectangle"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/download"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/download"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/musi_comment"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/view_ripple_rectangle"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/comment"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/comment"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_search_singer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/view_ripple_rectangle"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/singer"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:id="@+id/music_singer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="歌手：石川さゆり"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_delete"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/view_ripple_rectangle"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/delete"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_music"
            android:textSize="@dimen/font_medium_size"
            android:textColor="@color/positive"
            android:gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>
